SUBDIRS = . elements renderers
pkginclude_HEADERS = CEGUI.h \
                 CEGUIBase.h \
                 CEGUIColourRect.h \
                 CEGUIConfig.h \
                 CEGUIDataContainer.h \
                 CEGUIDefaultResourceProvider.h \
                 CEGUIEvent.h \
                 CEGUIEventArgs.h \
                 CEGUIEventSet.h \
                 CEGUIExceptions.h \
                 CEGUIFactoryModule.h \
                 CEGUIFont.h \
                 CEGUIFontManager.h \
                 CEGUIForwardRefs.h \
                 CEGUIGlobalEventSet.h \
                 CEGUIImage.h \
                 CEGUIImageset.h \
                 CEGUIImagesetManager.h \
                 CEGUIInputEvent.h \
                 CEGUIIteratorBase.h \
                 CEGUILogger.h \
                 CEGUIMouseCursor.h \
                 CEGUIProperty.h \
                 CEGUIPropertyHelper.h \
                 CEGUIPropertySet.h \
                 CEGUIRect.h \
                 CEGUIRefPtr.h \
                 CEGUIRenderableElement.h \
                 CEGUIRenderableFrame.h \
                 CEGUIRenderableImage.h \
                 CEGUIRenderer.h \
                 CEGUIResourceProvider.h \
                 CEGUIScheme.h \
                 CEGUISchemeManager.h \
                 CEGUIScriptModule.h \
                 CEGUISingleton.h \
                 CEGUISize.h \
                 CEGUIString.h \
                 CEGUISystem.h \
                 CEGUITextUtils.h \
                 CEGUITexture.h \
                 CEGUIVector.h \
                 CEGUIWindow.h \
                 CEGUIWindowFactory.h \
                 CEGUIWindowFactoryManager.h \
                 CEGUIWindowManager.h \
                 CEGUIWindowProperties.h \
                 CEGUIcolour.h

noinst_HEADERS = CEGUIConfig_xmlHandler.h \
             CEGUIFontManager_implData.h \
             CEGUIFont_implData.h  \
             CEGUIFont_xmlHandler.h \
             CEGUIGUILayout_xmlHandler.h \
             CEGUIImageset_xmlHandler.h \
             CEGUIScheme_xmlHandler.h \
             CEGUIXmlHandlerHelper.h