SUBDIRS = . elements falagard
pkginclude_HEADERS = CEGUI.h \
                 CEGUIBase.h \
                 CEGUIBoundSlot.h \
                 CEGUIColourRect.h \
                 CEGUIConfig.h \
                 CEGUIConfig_xmlHandler.h \
                 CEGUICoordConverter.h \
                 CEGUIDataContainer.h \
                 CEGUIDefaultLogger.h \
                 CEGUIDefaultResourceProvider.h \
                 CEGUIDynamicModule.h \
                 CEGUIEvent.h \
                 CEGUIEventArgs.h \
                 CEGUIEventSet.h \
                 CEGUIExceptions.h \
                 CEGUIFactoryModule.h \
                 CEGUIFont.h \
                 CEGUIFontManager.h \
                 CEGUIFont_xmlHandler.h \
                 CEGUIFreeTypeFont.h \
                 CEGUIForwardRefs.h \
                 CEGUIFreeFunctionSlot.h \
                 CEGUIFunctorCopySlot.h \
                 CEGUIFunctorPointerSlot.h \
                 CEGUIFunctorReferenceBinder.h \
                 CEGUIFunctorReferenceSlot.h \
                 CEGUIGlobalEventSet.h \
                 CEGUIGUILayout_xmlHandler.h \
                 CEGUIImage.h \
				 CEGUIImageCodec.h \
                 CEGUIImageset.h \
                 CEGUIImagesetManager.h \
                 CEGUIImageset_xmlHandler.h \
                 CEGUIInputEvent.h \
                 CEGUIIteratorBase.h \
                 CEGUILogger.h \
                 CEGUIMemberFunctionSlot.h \
                 CEGUIMouseCursor.h \
                 CEGUIPixmapFont.h \
                 CEGUIProperty.h \
                 CEGUIPropertyHelper.h \
                 CEGUIPropertySet.h \
                 CEGUIRect.h \
                 CEGUIRefCounted.h \
                 CEGUIRenderCache.h \
                 CEGUIRenderer.h \
                 CEGUIResourceProvider.h \
                 CEGUIScheme.h \
                 CEGUISchemeManager.h \
                 CEGUIScheme_xmlHandler.h \
                 CEGUIScriptModule.h \
                 CEGUIScriptWindowHelper.h \
                 CEGUISingleton.h \
                 CEGUISize.h \
                 CEGUISlotFunctorBase.h \
                 CEGUIString.h \
                 CEGUISubscriberSlot.h \
                 CEGUISystem.h \
                 CEGUITask.h \
                 CEGUITextUtils.h \
                 CEGUITexture.h \
                 CEGUIUDim.h \
                 CEGUIVector.h \
                 CEGUIVersion.h \
                 CEGUIWidgetModule.h \
                 CEGUIWindow.h \
                 CEGUIWindowFactory.h \
                 CEGUIWindowFactoryManager.h \
                 CEGUIWindowManager.h \
                 CEGUIWindowProperties.h \
                 CEGUIWindowRenderer.h \
                 CEGUIWindowRendererManager.h \
                 CEGUIWindowRendererModule.h \
                 CEGUIXMLAttributes.h \
                 CEGUIXMLHandler.h \
                 CEGUIXMLParser.h \
                 CEGUIXMLSerializer.h \
                 CEGUIcolour.h

noinst_HEADERS = CEGUIFreeTypeFont.h \
                 CEGUIPixmapFont.h
