EXTRA_DIST = mac/Xcode2/CrazyEddiesGUI/CEGUI-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/CEGUICoronaImageCodec-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/CEGUIDevILImageCodec-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/CEGUIExpatParser-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/CEGUIFalagard-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/CEGUIFreeImageImageCodec-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/CEGUIIrrlichtRenderer-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/CEGUILibxmlParser-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/CEGUISILLYImageCodec-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/CEGUITGAImageCodec-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/CEGUITaharezLook-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/CEGUITinyXMLParser-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/CEGUIWindowsLook-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/CEGUIXercesParser-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/CrazyEddiesGUI_Prefix.pch \
             mac/Xcode2/CrazyEddiesGUI/Info.plist \
             mac/Xcode2/CrazyEddiesGUI/LuaScriptModule-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/Minesweeper-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/OpenGLRenderer-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/ScrollablePaneDemo-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/TabControlDemo-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/CrazyEddiesGUI.xcodeproj/project.pbxproj \
             mac/Xcode2/CrazyEddiesGUI/English.lproj/InfoPlist.strings \
             premake/README \
             premake/build_samples_vs2002.bat \
             premake/build_samples_vs2003.bat \
             premake/build_samples_vs2005.bat \
             premake/build_vs2002.bat \
             premake/build_vs2003.bat \
             premake/build_vs2005.bat \
             premake/cegui.lua \
             premake/clean.bat \
             premake/clean_samples.bat \
             premake/config.lua \
             premake/helpers.lua \
             premake/samples.lua \
             premake/BaseSystem/premake.lua \
             premake/ImageCodecModules/CoronaImageCodec/premake.lua \
             premake/ImageCodecModules/DevILImageCodec/premake.lua \
             premake/ImageCodecModules/FreeImageImageCodec/premake.lua \
             premake/ImageCodecModules/SILLYImageCodec/premake.lua \
             premake/ImageCodecModules/TGAImageCodec/premake.lua \
             premake/RendererModules/DirectX81GUIRenderer/premake.lua \
             premake/RendererModules/DirectX9GUIRenderer/premake.lua \
             premake/RendererModules/IrrlichtRenderer/premake.lua \
             premake/RendererModules/OpenGLGUIRenderer/premake.lua \
             premake/Samples/Demo4/premake.lua \
             premake/Samples/Demo6/premake.lua \
             premake/Samples/Demo7/premake.lua \
             premake/Samples/Demo8/premake.lua \
             premake/Samples/FalagardDemo1/premake.lua \
             premake/Samples/FirstWindow/premake.lua \
             premake/Samples/FontDemo/premake.lua \
             premake/Samples/Medieval/premake.lua \
             premake/Samples/Minesweeper/premake.lua \
             premake/Samples/ScrollablePaneDemo/premake.lua \
             premake/Samples/TabControlDemo/premake.lua \
             premake/Samples/common/premake.lua \
             premake/ScriptingModules/CEGUILua/LuaScriptModule/premake.lua \
             premake/ScriptingModules/CEGUILua/tolua++/premake.lua \
             premake/ScriptingModules/CEGUILua/tolua++bin/premake.lua \
             premake/WindowRendererSets/Falagard/premake.lua \
             premake/XMLParserModules/TinyXMLParser/premake.lua \
             premake/XMLParserModules/XercesParser/premake.lua \
             premake/XMLParserModules/expatParser/premake.lua \
             premake/XMLParserModules/libxmlParser/premake.lua