EXTRA_DIST = mac/Xcode2/CrazyEddiesGUI/English.lproj/CEGUICoronaImageCodec-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/English.lproj/CEGUIDevILImageCodec-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/English.lproj/CEGUIExpatParser-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/English.lproj/CEGUIFalagard-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/English.lproj/CEGUIFreeImageImageCodec-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/English.lproj/CEGUI-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/English.lproj/CEGUIIrrlichtRenderer-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/English.lproj/CEGUILibxmlParser-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/English.lproj/CEGUISILLYImageCodec-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/English.lproj/CEGUITaharezLook-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/English.lproj/CEGUITGAImageCodec-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/English.lproj/CEGUITinyXMLParser-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/English.lproj/ceguitolua++-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/English.lproj/CEGUIWindowsLook-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/English.lproj/CEGUIXercesParser-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/English.lproj/CrazyEddiesGUI_Prefix.pch \
             mac/Xcode2/CrazyEddiesGUI/English.lproj/CrazyEddiesGUI.xcodeproj \
             mac/Xcode2/CrazyEddiesGUI/English.lproj/Demo6-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/English.lproj/Demo7-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/English.lproj/Demo8-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/English.lproj/DragDropDemo-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/English.lproj/English.lproj \
             mac/Xcode2/CrazyEddiesGUI/English.lproj/FalagardDemo1-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/English.lproj/FirstWindow-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/English.lproj/FontDemo-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/English.lproj/Info.plist \
             mac/Xcode2/CrazyEddiesGUI/English.lproj/InstancedWindows-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/English.lproj/LuaScriptModule-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/English.lproj/Minesweeper-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/English.lproj/OpenGLRenderer-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/English.lproj/ScrollablePaneDemo-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/English.lproj/TabControlDemo-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/English.lproj/TextDemo-Info.plist \
             mac/Xcode2/CrazyEddiesGUI/English.lproj/TreeDemo-Info.plist \
             premake/README \
             premake/build_samples_vs2002.bat \
             premake/build_samples_vs2003.bat \
             premake/build_samples_vs2005.bat \
             premake/build_samples_vs2008.bat \
             premake/build_vs2002.bat \
             premake/build_vs2003.bat \
             premake/build_vs2005.bat \
             premake/build_vs2008.bat \
             premake/cegui.lua \
             premake/clean.bat \
             premake/clean_samples.bat \
             premake/config.lua \
             premake/helpers.lua \
             premake/samples.lua \
             premake/BaseSystem/premake.lua \
             premake/ImageCodecModules/CoronaImageCodec/premake.lua \
             premake/ImageCodecModules/DevILImageCodec/premake.lua \
             premake/ImageCodecModules/FreeImageImageCodec/premake.lua \
             premake/ImageCodecModules/SILLYImageCodec/premake.lua \
             premake/ImageCodecModules/TGAImageCodec/premake.lua \
             premake/RendererModules/DirectX81GUIRenderer/premake.lua \
             premake/RendererModules/DirectX9GUIRenderer/premake.lua \
             premake/RendererModules/IrrlichtRenderer/premake.lua \
             premake/RendererModules/OpenGLGUIRenderer/premake.lua \
             premake/Samples/TextDemo/premake.lua \
             premake/Samples/Demo6/premake.lua \
             premake/Samples/Demo7/premake.lua \
             premake/Samples/Demo8/premake.lua \
             premake/Samples/DragDropDemo/premake.lua \
             premake/Samples/FalagardDemo1/premake.lua \
             premake/Samples/FirstWindow/premake.lua \
             premake/Samples/FontDemo/premake.lua \
             premake/Samples/InstancedWindows/premake.lua \
             premake/Samples/Medieval/premake.lua \
             premake/Samples/Minesweeper/premake.lua \
             premake/Samples/ScrollablePaneDemo/premake.lua \
             premake/Samples/TabControlDemo/premake.lua \
             premake/Samples/TreeDemo/premake.lua \
             premake/Samples/common/premake.lua \
             premake/ScriptingModules/CEGUILua/LuaScriptModule/premake.lua \
             premake/ScriptingModules/CEGUILua/tolua++/premake.lua \
             premake/ScriptingModules/CEGUILua/tolua++bin/premake.lua \
             premake/WindowRendererSets/Falagard/premake.lua \
             premake/XMLParserModules/TinyXMLParser/premake.lua \
             premake/XMLParserModules/XercesParser/premake.lua \
             premake/XMLParserModules/expatParser/premake.lua \
             premake/XMLParserModules/libxmlParser/premake.lua