EXTRA_DIST = premake/README \
             premake/build_samples_vs2002.bat \
             premake/build_samples_vs2003.bat \
             premake/build_samples_vs2005.bat \
             premake/build_samples_vs2008.bat \
             premake/build_vs2002.bat \
             premake/build_vs2003.bat \
             premake/build_vs2005.bat \
             premake/build_vs2008.bat \
             premake/cegui.lua \
             premake/clean.bat \
             premake/clean_samples.bat \
             premake/config.lua \
             premake/helpers.lua \
             premake/samples.lua \
             premake/BaseSystem/premake.lua \
             premake/ImageCodecModules/CoronaImageCodec/premake.lua \
             premake/ImageCodecModules/DevILImageCodec/premake.lua \
             premake/ImageCodecModules/FreeImageImageCodec/premake.lua \
             premake/ImageCodecModules/SILLYImageCodec/premake.lua \
             premake/ImageCodecModules/TGAImageCodec/premake.lua \
             premake/RendererModules/Direct3D10/premake.lua \
             premake/RendererModules/Direct3D9/premake.lua \
             premake/RendererModules/Irrlicht/premake.lua \
             premake/RendererModules/Ogre/premake.lua \
             premake/RendererModules/OpenGL/premake.lua \
             premake/Samples/TextDemo/premake.lua \
             premake/Samples/Demo6/premake.lua \
             premake/Samples/Demo7/premake.lua \
             premake/Samples/Demo8/premake.lua \
             premake/Samples/DragDropDemo/premake.lua \
             premake/Samples/FalagardDemo1/premake.lua \
             premake/Samples/FirstWindow/premake.lua \
             premake/Samples/FontDemo/premake.lua \
             premake/Samples/Medieval/premake.lua \
             premake/Samples/Minesweeper/premake.lua \
             premake/Samples/ScrollablePaneDemo/premake.lua \
             premake/Samples/TabControlDemo/premake.lua \
             premake/Samples/TreeDemo/premake.lua \
             premake/Samples/common/premake.lua \
             premake/ScriptingModules/LuaScriptModule/premake.lua \
             premake/ScriptingModules/LuaScriptModule/support/tolua++/premake.lua \
             premake/ScriptingModules/LuaScriptModule/support/tolua++bin/premake.lua \
             premake/WindowRendererSets/Falagard/premake.lua \
             premake/XMLParserModules/TinyXMLParser/premake.lua \
             premake/XMLParserModules/XercesParser/premake.lua \
             premake/XMLParserModules/expatParser/premake.lua \
             premake/XMLParserModules/libxmlParser/premake.lua