EXTRA_DIST = premake/README \
             premake/build_samples_vs2003.bat \
             premake/build_samples_vs2005.bat \
             premake/build_samples_vs2008.bat \
             premake/build_vs2003.bat \
             premake/build_vs2005.bat \
             premake/build_vs2008.bat \
             premake/cegui.lua \
             premake/clean.bat \
             premake/clean_samples.bat \
             premake/config.lua \
             premake/helpers.lua \
             premake/samples.lua \
             premake/BaseSystem/premake.lua \
             premake/ImageCodecModules/CoronaImageCodec/premake.lua \
             premake/ImageCodecModules/DevILImageCodec/premake.lua \
             premake/ImageCodecModules/FreeImageImageCodec/premake.lua \
             premake/ImageCodecModules/SILLYImageCodec/premake.lua \
             premake/ImageCodecModules/STBImageCodec/premake.lua \
             premake/ImageCodecModules/TGAImageCodec/premake.lua \
             premake/RendererModules/Direct3D10/premake.lua \
             premake/RendererModules/Direct3D11/premake.lua \
             premake/RendererModules/Direct3D9/premake.lua \
             premake/RendererModules/Irrlicht/premake.lua \
             premake/RendererModules/Null/premake.lua \
             premake/RendererModules/Ogre/premake.lua \
             premake/RendererModules/OpenGL/premake.lua \
             premake/Samples/TextDemo/premake.lua \
             premake/Samples/Demo6/premake.lua \
             premake/Samples/Demo7/premake.lua \
             premake/Samples/Demo8/premake.lua \
             premake/Samples/DragDropDemo/premake.lua \
             premake/Samples/FalagardDemo1/premake.lua \
             premake/Samples/FirstWindow/premake.lua \
             premake/Samples/FontDemo/premake.lua \
             premake/Samples/InventoryDemo/premake.lua \
             premake/Samples/Medieval/premake.lua \
             premake/Samples/Minesweeper/premake.lua \
             premake/Samples/ScrollablePaneDemo/premake.lua \
             premake/Samples/TabControlDemo/premake.lua \
             premake/Samples/TreeDemo/premake.lua \
             premake/Samples/common/premake.lua \
             premake/ScriptingModules/LuaScriptModule/premake.lua \
             premake/ScriptingModules/LuaScriptModule/support/tolua++/premake.lua \
             premake/ScriptingModules/LuaScriptModule/support/tolua++bin/premake.lua \
             premake/ScriptingModules/PythonScriptModule/PyCEGUINullRenderer/premake.lua \
             premake/ScriptingModules/PythonScriptModule/PyCEGUIOgreRenderer/premake.lua \
             premake/ScriptingModules/PythonScriptModule/PyCEGUIOpenGLRenderer/premake.lua \
             premake/ScriptingModules/PythonScriptModule/PyCEGUI/premake.lua \
             premake/WindowRendererSets/Falagard/premake.lua \
             premake/XMLParserModules/TinyXMLParser/premake.lua \
             premake/XMLParserModules/XercesParser/premake.lua \
             premake/XMLParserModules/expatParser/premake.lua \
             premake/XMLParserModules/libxmlParser/premake.lua \
             Xcode/CEGUIBase-Info.plist \
             Xcode/CEGUICoronaImageCodec-Info.plist \
             Xcode/CEGUIDevILImageCodec-Info.plist \
             Xcode/CEGUIExpatParser-Info.plist \
             Xcode/CEGUIFalagardWRBase-Info.plist \
             Xcode/CEGUIFreeImageImageCodec-Info.plist \
             Xcode/CEGUIIrrlichtRenderer-Info.plist \
             Xcode/CEGUILibxmlParser-Info.plist \
             Xcode/CEGUILuaScriptModule-Info.plist \
             Xcode/CEGUIOgreRenderer-Info.plist \
             Xcode/CEGUIOpenGLRenderer-Info.plist \
             Xcode/CEGUIRapidXMLParser-Info.plist \
             Xcode/CEGUISampleHelper-Info.plist \
             Xcode/CEGUISILLYImageCodec-Info.plist \
             Xcode/CEGUISTBImageCodec-Info.plist \
             Xcode/CEGUITGAImageCodec-Info.plist \
             Xcode/CEGUITinyXMLParser-Info.plist \
             Xcode/ceguitolua++-Info.plist \
             Xcode/CEGUIXercesParser-Info.plist \
             Xcode/Demo6-Info.plist \
             Xcode/Demo7-Info.plist \
             Xcode/Demo8-Info.plist \
             Xcode/DragDropDemo-Info.plist \
             Xcode/FalagardDemo1-Info.plist \
             Xcode/FirstWindow-Info.plist \
             Xcode/FontDemo-Info.plist \
             Xcode/InstancedWindows-Info.plist \
             Xcode/InventoryDemo-Info.plist \
             Xcode/Minesweeper-Info.plist \
             Xcode/RendererSelector.xib \
             Xcode/ScrollablePaneDemo-Info.plist \
             Xcode/TabControlDemo-Info.plist \
             Xcode/TextDemo-Info.plist \
             Xcode/TreeDemo-Info.plist \
             Xcode/CEGUI.xcodeproj/project.pbxproj
